--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "pg": "^8.9.0",
     "sequelize": "^6.28.0"
   },
@@ -10,7 +11,6 @@
   "description": "[![Open in Visual Studio Code](https://classroom.github.com/assets/open-in-vscode-c66648af7eb3fe8bc4f294546bfd86ef473780cde1dea487d3c4ff354943c9ae.svg)](https://classroom.github.com/online_ide?assignment_repo_id=10196089&assignment_repo_type=AssignmentRepo)\r # p2-iproject-server\r Individual Project - Server",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "start": "node app.js"
   },
@@ -24,5 +24,8 @@
   "bugs": {
     "url": "https://github.com/h8-fsjs-gitclass-p2-23/fsjs-p2-v1-iproject-server-Agiff/issues"
   },
-  "homepage": "https://github.com/h8-fsjs-gitclass-p2-23/fsjs-p2-v1-iproject-server-Agiff#readme"
+  "homepage": "https://github.com/h8-fsjs-gitclass-p2-23/fsjs-p2-v1-iproject-server-Agiff#readme",
+  "devDependencies": {
+    "dotenv": "^16.0.3"
+  }
 }
