--- a/config/config.json
+++ b/config/config.json
@@ -4,7 +4,8 @@
     "password": "qwerty123",
     "database": "Genshin_DB",
     "host": "127.0.0.1",
-    "dialect": "postgres"
+    "dialect": "postgres",
+    "logging": false
   },
   "test": {
     "username": "root",
