--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node app.js",
     "devStart": "nodemon app",
     "reset-db": "sequelize db:migrate:undo:all && sequelize db:migrate && sequelize db:seed:all"
   },
